--- a/app/src/main/res/layout/contact_card.xml
+++ b/app/src/main/res/layout/contact_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
@@ -12,83 +12,100 @@
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="2dp"
-                                       card_view:cardElevation="1dp">
-        <LinearLayout android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical">
+                                       app:cardElevation="1dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
+                    android:id="@+id/contact_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Contact"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                    android:id="@+id/profile_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"
+                    android:drawablePadding="16dp"
+                    android:drawableStart="@drawable/ic_linked_in"
+                    android:text="Profile"
+                    android:gravity="center"
+                    app:layout_constraintTop_toBottomOf="@+id/contact_label"
+                    app:layout_constraintBottom_toTopOf="@+id/phone_label"
+                    app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                    android:id="@+id/profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="profile"
+                    android:gravity="center"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/profile_label"
+                    app:layout_constraintTop_toTopOf="@+id/profile_label"
+                    app:layout_constraintStart_toEndOf="@+id/profile_label"/>
+            <TextView
+                    android:id="@+id/phone_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:drawablePadding="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"
+                    android:drawableStart="@drawable/ic_phone_blue_24dp"
+                    android:gravity="center"
+                    android:text="Phone"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_label"
+                    app:layout_constraintBottom_toTopOf="@+id/email_label"
+                    app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                    android:id="@+id/phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="phone"
+                    android:gravity="center"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintTop_toTopOf="@+id/phone_label"
+                    app:layout_constraintBottom_toBottomOf="@+id/phone_label"
+                    app:layout_constraintStart_toEndOf="@+id/phone_label"/>
+
+
+            <TextView
+                    android:id="@+id/email_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:drawablePadding="16dp"
+                    android:drawableStart="@drawable/ic_email_black_24dp"
+                    android:text="Email"
+                    android:gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="16dp"/>
-            <LinearLayout android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:orientation="horizontal">
-                <TextView
-                        android:id="@+id/profile_label"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginLeft="16dp"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:drawablePadding="16dp"
-                        android:drawableLeft="@drawable/ic_linked_in"
-                        android:text="Profile"/>
-                <TextView
-                        android:id="@+id/profile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        tools:text="profile"/>
-            </LinearLayout>
-            <LinearLayout android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:layout_marginTop="8dp"
-                          android:orientation="horizontal">
-                <TextView
-                        android:id="@+id/phone_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:drawablePadding="16dp"
-                        android:drawableLeft="@drawable/ic_phone_blue_24dp"
-                        android:text="Phone"/>
-                <TextView
-                        android:id="@+id/phone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        tools:text="phone"/>
-            </LinearLayout>
-            <LinearLayout android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:layout_marginTop="8dp"
-                          android:layout_marginBottom="8dp"
-                          android:orientation="horizontal">
-                <TextView
-                        android:id="@+id/email_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:layout_marginLeft="16dp"
-                        android:drawablePadding="16dp"
-                        android:drawableLeft="@drawable/ic_email_black_24dp"
-                        android:text="Email"/>
-                <TextView
-                        android:id="@+id/email"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        tools:text="email"
-                        android:layout_marginBottom="8dp"/>
-            </LinearLayout>
-        </LinearLayout>
+                    app:layout_constraintTop_toBottomOf="@+id/phone_label"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                    android:id="@+id/email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="email"
+                    android:gravity="center"
+                    app:layout_constraintBottom_toBottomOf="@+id/email_label"
+                    app:layout_constraintLeft_toRightOf="@+id/email_label"
+                    app:layout_constraintTop_toTopOf="@+id/email_label"
+                    android:layout_marginStart="8dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 </layout>
