--- a/app/src/main/res/layout/education_list_item.xml
+++ b/app/src/main/res/layout/education_list_item.xml
@@ -1,47 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
                 name="viewModel"
                 type="com.exercise.cvapp.viewmodel.ProfileViewModel"/>
     </data>
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:orientation="horizontal">
+            android:layout_marginBottom="8dp">
         <ImageView
                 android:id="@+id/logo_url"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="16dp"/>
-
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical">
-            <TextView
-                    android:id="@+id/university_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    tools:text="university name"
-                    android:layout_marginLeft="16dp"/>
-            <TextView
-                    android:id="@+id/course_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:text="course title"
-                    android:layout_marginLeft="16dp"/>
-            <TextView
-                    android:id="@+id/period"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:text="period"
-                    android:layout_marginLeft="16dp"/>
-        </LinearLayout>
-    </LinearLayout>
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/period"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"/>
+        <TextView
+                android:id="@+id/university_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                tools:text="university name"
+                android:layout_marginStart="16dp"
+                app:layout_constraintVertical_chainStyle="packed"
+                app:layout_constraintStart_toEndOf="@+id/logo_url"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/course_title"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+                android:layout_marginBottom="4dp"/>
+        <TextView
+                android:id="@+id/course_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:text="course title"
+                app:layout_constraintTop_toBottomOf="@+id/university_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/period"
+                app:layout_constraintStart_toStartOf="@+id/university_name" android:layout_marginBottom="4dp"/>
+        <TextView
+                android:id="@+id/period"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:text="period"
+                app:layout_constraintTop_toBottomOf="@+id/course_title"
+                app:layout_constraintStart_toEndOf="@+id/logo_url"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
