--- a/app/src/main/res/layout/experience_card.xml
+++ b/app/src/main/res/layout/experience_card.xml
@@ -13,23 +13,29 @@
                                        android:layout_height="wrap_content"
                                        android:layout_margin="2dp"
                                        card_view:cardElevation="1dp">
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical">
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
+                    android:id="@+id/experience_label"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/experience"
                     android:textSize="16sp"
                     android:textColor="@android:color/black"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="16dp"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="16dp" android:layout_marginTop="8dp"/>
             <androidx.recyclerview.widget.RecyclerView
-                      android:id="@+id/experience_list"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-        </LinearLayout>
-
+                    android:id="@+id/experience_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/experience_label"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
