--- a/app/src/main/res/layout/profile_summary_card.xml
+++ b/app/src/main/res/layout/profile_summary_card.xml
@@ -26,9 +26,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_marginEnd="16dp" android:layout_marginTop="8dp"/>
             <TextView
                     android:id="@+id/summary"
                     android:layout_width="0dp"
