--- a/app/src/main/res/layout/education_list_item.xml
+++ b/app/src/main/res/layout/education_list_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
                 name="viewModel"
-                type="com.exercise.cvapp.viewmodel.ProfileViewModel"/>
+                type="com.exercise.cvapp.view.viewmodel.ProfileViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
