--- a/app/src/main/res/layout/contact_card.xml
+++ b/app/src/main/res/layout/contact_card.xml
@@ -41,7 +41,8 @@
                     android:gravity="center"
                     app:layout_constraintTop_toBottomOf="@+id/contact_label"
                     app:layout_constraintBottom_toTopOf="@+id/phone_label"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:fontFamily="@font/aladin"/>
             <TextView
                     android:id="@+id/profile"
                     android:layout_width="wrap_content"
