--- a/app/src/main/res/layout/experience_card.xml
+++ b/app/src/main/res/layout/experience_card.xml
@@ -26,7 +26,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginLeft="16dp" android:layout_marginTop="8dp"/>
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"/>
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/experience_list"
                     android:layout_width="match_parent"
