Refactor & modularize the app to have a separate data module

--- a/app/src/main/res/layout/top_section_card.xml
+++ b/app/src/main/res/layout/top_section_card.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
                 name="profile"
-                type="com.exercise.cvapp.models.Profile"/>
+                type="com.example.data.models.Profile"/>
     </data>
     <androidx.cardview.widget.CardView android:id="@+id/card_view"
                                        android:layout_width="match_parent"
