--- a/app/src/main/res/layout/contact_card.xml
+++ b/app/src/main/res/layout/contact_card.xml
@@ -3,11 +3,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
-    <data>
-        <variable
-                name="profile"
-                type="com.exercise.cvapp.models.Profile"/>
-    </data>
     <androidx.cardview.widget.CardView android:id="@+id/card_view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
@@ -44,10 +39,10 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:fontFamily="@font/aladin"/>
             <TextView
-                    android:id="@+id/profile"
+                    android:id="@+id/profile_link"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="profile"
+                    tools:text="profile link"
                     android:gravity="center"
                     android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/profile_label"
